# hs-text-xhtml

./: AUTHORS  NOTICE  Setup.hs  xhtml.cabal
Text/: XHtml.hs
Text/XHtml/: BlockTable.hs  Debug.hs  Extras.hs  Frameset.hs  Internals.hs  Strict.hs  Table.hs  Transitional.hs
Text/XHtml/Frameset/: Attributes.hs  Elements.hs
Text/XHtml/Strict/: Attributes.hs  Elements.hs
Text/XHtml/Transitional/: Attributes.hs  Elements.hs
