-- Copyright 1999-2011 The Text.XHtml Authors. 
--
-- Contributors:
--   Simon Marlow <marlowsd@gmail.com>
--   Robin Bate Boerop <robin@bateboerop.name>

Name: xhtml
Version: 3000.2.0.1
Copyright: Copyright 1999-2011 The Text.XHtml Authors.
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
License: BSD3
License-file: LICENSE
build-depends: base >= 4.0 && < 4.4
Extensions: 
Synopsis: An XHTML combinator library
Description:
 This package provides combinators for producing
  XHTML 1.0, including the Strict, Transitional and Frameset variants.
Build-Type: Simple
Exposed-Modules: 
  Text.XHtml, 
  Text.XHtml.Frameset,
  Text.XHtml.Strict,
  Text.XHtml.Transitional,
  Text.XHtml.Debug,
  Text.XHtml.Table
Other-modules:
  Text.XHtml.Strict.Attributes,
  Text.XHtml.Strict.Elements,
  Text.XHtml.Frameset.Attributes,
  Text.XHtml.Frameset.Elements,
  Text.XHtml.Transitional.Attributes,
  Text.XHtml.Transitional.Elements,
  Text.XHtml.BlockTable,
  Text.XHtml.Extras,
  Text.XHtml.Internals
ghc-options: -O2 -W
