-- Copyright 2011 The Text.XHtml Authors.
-- 
-- Licensed under the Apache License, Version 2.0 (the "License"); you may not
-- use this file except in compliance with the License.  You may obtain a copy
-- of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
-- WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
-- License for the specific language governing permissions and limitations under
-- the License.
--
-- Contributors:
--   Simon Marlow <marlowsd@gmail.com>
--   Robin Bate Boerop <robin@bateboerop.name>

Name: xhtml
Version: 3000.2.0.2
Copyright: Copyright 1999-2011 The Text.XHtml Authors.
Maintainer: bjorn@bringert.net
Author: Bjorn Bringert
License-file: LICENSE
build-depends: base >= 4.0 && < 4.4
Extensions: 
Synopsis: An XHTML combinator library
Description:
 This package provides combinators for producing
  XHTML 1.0, including the Strict, Transitional and Frameset variants.
Build-Type: Simple
Exposed-Modules: 
  Text.XHtml, 
  Text.XHtml.Frameset,
  Text.XHtml.Strict,
  Text.XHtml.Transitional,
  Text.XHtml.Debug,
  Text.XHtml.Table
Other-modules:
  Text.XHtml.Strict.Attributes,
  Text.XHtml.Strict.Elements,
  Text.XHtml.Frameset.Attributes,
  Text.XHtml.Frameset.Elements,
  Text.XHtml.Transitional.Attributes,
  Text.XHtml.Transitional.Elements,
  Text.XHtml.BlockTable,
  Text.XHtml.Extras,
  Text.XHtml.Internals
ghc-options: -O2 -W
